tests/errors/test-function-invalid-default-arg.script

int sum(int a = 0, int b) { return a + b; }

//>2:5: error C28: cannot have a parameter without a default value after one was provided.
